--- a/app/views/chat.scala.html
+++ b/app/views/chat.scala.html
@@ -6,6 +6,7 @@
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
             <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
+            <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
             <title>ChatBot</title>
         </head>
     <body>
