--- a/app/views/chat.scala.html
+++ b/app/views/chat.scala.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
         <head>
@@ -7,6 +6,7 @@
             <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
             <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
             <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+            <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
             <title>ChatBot</title>
         </head>
     <body>
@@ -19,10 +19,16 @@
             </div>
             <form id="mensagem" class="mensagem">
                 <input type="text" id="texto" name="texto" placeholder="Digite sua mensagem"/>
-                <button type="submit">Enviar</button>
+                <button type="submit" id="mensagem">Enviar</button>
             </form>
         </div>
+        @helper.javascriptRouter("jsRoutes")(routes.javascript.BotController.socket)
+        <script type="text/javascript">
+
+        </script>
+
         <script type='text/javascript' src='@routes.Assets.versioned("javascripts/components.js")'></script>
         <script type='text/javascript' src='@routes.Assets.versioned("javascripts/app.js")'></script>
+
     </body>
 </html>
