--- a/app/views/chat.scala.html
+++ b/app/views/chat.scala.html
@@ -10,17 +10,15 @@
             <title>ChatBot</title>
         </head>
     <body>
-        <div id="on" class="watson">
-            <div class="mensagens">
-                <div class="area" id="chat">
-		</div>
-                <div id="chat-messages">
-        </div>
+        <div class="chat_wrapper" id="chat_wrapper">
+            <div class="message_box" id="message_box"></div>
+            <div class="panel">
+                <input type="text" name="message" class="message" id="message" placeholder="Message" maxlength="80" style="width:40%" />
+                <button id="send-btn">Send</button>
             </div>
-            <form id="mensagem" class="mensagem">
-                <input type="text" id="texto" name="texto" placeholder="Digite sua mensagem"/>
-                <button type="submit" id="mensagem">Enviar</button>
-            </form>
+        </div>
+
+
         </div>
         @helper.javascriptRouter("jsRoutes")(routes.javascript.BotController.socket)
         <script type="text/javascript">
