--- a/app/views/chat.scala.html
+++ b/app/views/chat.scala.html
@@ -13,15 +13,18 @@
         <div class="chat_wrapper" id="chat_wrapper">
             <div class="message_box" id="message_box"></div>
             <div class="panel">
-                <!--form class="chat-window-form" id="form-main"-->
                 <input type="text" name="message" class="message" id="message" placeholder="Message" maxlength="80" style="width:40%" />
-                <button  id="send-btn">Send</button>
-                <!--/form-->
+                <button id="send-btn">Send</button>
             </div>
         </div>
         @helper.javascriptRouter("jsRoutes")(routes.javascript.BotController.socket)
+        <script type="text/javascript">
+
+        </script>
+
         <script type='text/javascript' src='@routes.Assets.versioned("javascripts/components.js")'></script>
         <script type='text/javascript' src='@routes.Assets.versioned("javascripts/app.js")'></script>
+
 
     </body>
 </html>
